fix(mobile): Wrong size of some of the larger colored list elements [OAPTAU-518]
- Altered styles of checkbox and radio examples in demo app which were breaking listview

--- a/tau/demos/SDK/mobile/UIComponents/components/controls/styles.css
+++ b/tau/demos/SDK/mobile/UIComponents/components/controls/styles.css
@@ -2,5 +2,5 @@
 .favorite-result,
 .radio-result{
 	text-align: center;
-	line-height: 50px
+	color: #3296A6;
 }
